src/component/style/loading.module.css
.backdrop {
    display: none;
    justify-content: center;
    align-items: center;
    position: fixed;
    background: rgba(0, 0, 0, .75);
    backdrop-filter: blur(3px);
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 9999;
    transition: all .5s ease-in-out;
}

.ball {
    animation: rotate 1s infinite;
    height: 50px;
    width: 50px;
}

.ball:before,
.ball:after {
    border-radius: 50%;
    content: "";
    display: block;
    height: 20px;
    width: 20px;
}

.ball:before {
    animation: ball1 1s infinite;
    background-color: var(--users-loader-sec);
    box-shadow: 30px 0 0 var(--users-loader-prim);
    margin-bottom: 10px;
}

.ball:after {
    animation: ball2 1s infinite;
    background-color: var(--users-loader-prim);
    box-shadow: 30px 0 0 var(--users-background);
}

.spinner {
    border-radius: 50%;
    display: inline-block;
    border-right: 3px solid transparent;
    box-sizing: border-box;
    animation: rotation 1s linear infinite;
}

@keyframes ball1 {
    0% {
        box-shadow: 30px 0 0 var(--users-loader-prim);
    }

    50% {
        box-shadow: 0 0 0 var(--users-loader-prim);
        margin-bottom: 0;
        transform: translate(15px, 15px);
    }

    100% {
        box-shadow: 30px 0 0 var(--users-loader-prim);
        margin-bottom: 10px;
    }
}

@keyframes ball2 {
    0% {
        box-shadow: 30px 0 0 var(--users-loader-sec);
    }

    50% {
        box-shadow: 0 0 0 var(--users-loader-sec);
        margin-top: -20px;
        transform: translate(15px, 15px);
    }

    100% {
        box-shadow: 30px 0 0 var(--users-loader-sec);
        margin-top: 0;
    }
}

@keyframes rotate {
    0% {
        transform: rotate(0deg) scale(0.8)
    }

    50% {
        transform: rotate(360deg) scale(1.2)
    }

    100% {
        transform: rotate(720deg) scale(0.8)
    }
}

@keyframes rotation {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

